Fixed sliding panel and collapsing div Javascript for use with the new layouts
git-svn-id: https://civic-crm.googlecode.com/svn/branches/mysql@898 4e447b6a-6056-7046-2609-0fe1680c5616

--- a/crm/public/skins/local/layouts/twoColumn_300-a.css
+++ b/crm/public/skins/local/layouts/twoColumn_300-a.css
@@ -1,3 +1,20 @@
+/**
+ * This layout supports sliding the left panel in and out of the side
+ * It relies on Javascript. Make sure to include /js/slidingPanel.js
+ */
 .panel { }
 #left { width:300px; float:left; }
 #right { margin-left:310px; }
+
+.hideLeft #left { position:absolute; left:-280px; }
+.hideLeft #right { margin-left: 20px; }
+
+#slideButton {
+	/* Hide the text.  Only show the icon */
+	display:inline-block; text-indent:-999px; overflow:hidden; /* Get rid of the text */
+	width:0; padding:0 0 0 25px;
+	vertical-align:middle;
+	float:right;
+	background:white url('../images/arrow_left.png') 8px center no-repeat;
+}
+.hideLeft #slideButton { background-image:url('../images/arrow_right.png'); }
